tests/fails/f9.t
if not require("fail") then return end

terra foo() : 3 
end
foo()
